# WebhookMind

./: .dockerignore  .env.compose.example  .env.example  .gitignore  Dockerfile  PHASE1_CORE_PIPELINE.md  PHASE2_FILE_PROCESSING.md  PHASE3_INTELLIGENCE_LAYER.md  PHASE4_DASHBOARD.md  Procfile  README.md  STARTUP.md  docker-compose.yml  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: ci.yml
cmd/api/: main.go
cmd/delivery/: main.go
cmd/extractor-bridge/: main.go
cmd/ingestion/: main.go
cmd/orchestrator/: main.go
cmd/sse/: main.go
cpp/: CMakeLists.txt  Dockerfile
cpp/include/: audio_handler.h  extractor.h  fingerprinter.h  llm_labeler.h  ocr_handler.h  pdf_handler.h  template_cache.h
cpp/src/: audio_handler.cpp  extractor.cpp  fingerprinter.cpp  llm_labeler.cpp  main.cpp  ocr_handler.cpp  pdf_handler.cpp  template_cache.cpp
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/Charts/: LatencyChart.tsx  ThroughputChart.tsx
dashboard/src/components/DeliveryLog/: DLQPanel.tsx
dashboard/src/components/PayloadDiff/: DiffViewer.tsx
dashboard/src/components/Replay/: ReplayPanel.tsx
dashboard/src/components/Routing/: RulesEditor.tsx
dashboard/src/components/SchemaDrift/: DriftAlert.tsx  SchemaViewer.tsx
dashboard/src/components/TryIt/: CopyButton.tsx  TryItPanel.tsx
dashboard/src/components/WebhookStream/: ExtractionBadge.tsx  StreamPanel.tsx  WebhookCard.tsx
dashboard/src/lib/: api.ts  sse.ts  types.ts
dashboard/src/stores/: alerts.ts  byok.ts  metrics.ts  sandbox.ts  webhooks.ts
deployments/nginx/: webhookmind.conf
internal/api/: handlers.go  handlers_dashboard.go  router.go
internal/config/: config.go
internal/delivery/: engine.go
internal/extraction/: backend.go  cleanup.go  cleanup_test.go  client.go  cloud.go  cloud_test.go  detect.go  detect_test.go  docx.go  docx_test.go  fallback.go  local.go  provider.go  provider_anthropic.go  provider_openai.go  provider_openai_test.go
internal/extraction/pb/: extraction.pb.go  extraction_grpc.pb.go
internal/filestore/: minio.go
internal/ingestion/: handler.go  handler_test.go  signature.go  signature_test.go
internal/models/: extraction.go  webhook.go
internal/pubsub/: events.go  metrics.go  publisher.go  subscriber.go
internal/queue/: redis.go  redis_test.go
internal/ratelimit/: limiter.go  limiter_test.go
internal/replay/: engine.go  types.go
internal/routing/: engine.go  evaluator.go  evaluator_test.go  types.go
internal/schema/: drift.go  drift_test.go  flatten.go  flatten_test.go  inference.go  inference_test.go  types.go
internal/sse/: handler.go  hub.go
internal/store/: postgres.go  scylla.go
migrations/: Dockerfile.cql  postgres-migrate.sh
migrations/postgres/: 001_init.sql  002_extraction.sql  003_intelligence.sql  004_signing_secret.sql
migrations/scylla/: 001_events.cql
proto/: extraction.proto
